--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <p>The United States Embassy runs <a href="https://twitter.com/BeijingAir">a twitter account</a> which tweets the current levels of air pollution in Beijing. The values tweeted are points on the (Air Quality Index)[<a href="http://www.airnow.gov/index.cfm?action=aqibasics.aqi">http://www.airnow.gov/index.cfm?action=aqibasics.aqi</a>]. Apparently the authorities have threatened to shut it down multiple times but not yet followed through.</p>
 
-<p>I think it's a great idea, and decided to graph the data as it's rather tough to digest in tweet form. This graph will update hourly, just as the twitter feed does.</p>
+<p>I think it's a great idea and I've decided to graph the data, since it's rather tough to digest in tweet form. This graph will update hourly, just as the twitter feed does.</p>
 
 <h2>Current Pollution Levels</h2>
 
