Longer title, fix link

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             </header>
             -->
             <section>
-                <h1>Chinese Air</h1>
+                <h1>Graphing Pollution Levels of Chinese Air</h1>
 
 <p>Reports of high levels of air pollution in China are nothing new, but <a href="http://www.bbc.co.uk/news/world-asia-china-21007893">recent reports</a> have startled many. These are reports of air quality levels so low that even the usually docile citizenry has begun to protest. </p>
 
-<p>The United States Embassy runs <a href="https://twitter.com/BeijingAir">a twitter account</a> which tweets the current levels of air pollution in Beijing. The values tweeted are points on the (Air Quality Index)[<a href="http://www.airnow.gov/index.cfm?action=aqibasics.aqi">http://www.airnow.gov/index.cfm?action=aqibasics.aqi</a>]. Apparently the authorities have threatened to shut it down multiple times but not yet followed through.</p>
+<p>The United States Embassy runs <a href="https://twitter.com/BeijingAir">a twitter account</a> which tweets the current levels of air pollution in Beijing. The values tweeted are points on the <a href="http://www.airnow.gov/index.cfm?action=aqibasics.aqi">Air Quality Index</a>. Apparently the authorities have threatened to shut it down multiple times but not yet followed through.</p>
 
 <p>I think it's a great idea and I've decided to graph the data, since it's rather tough to digest in tweet form. This graph will update hourly, just as the twitter feed does.</p>
 
