--- a/index.html
+++ b/index.html
@@ -1241,33 +1241,22 @@
 </head>
 <body>
 <div class="wrapper">
-<!--
-            <header>
-                <h1>Chineseair</h1>
-                <p>Graphing levels of air pollution in Chinese cities</p>
-                <p class="view"><a href="https://github.com/kopf/chineseair">View the Project on GitHub <small>kopf/chineseair</small></a></p>
-                <ul>
-                    <li><a href="https://github.com/kopf/chineseair/zipball/master">Download <strong>ZIP File</strong></a></li>
-                    <li><a href="https://github.com/kopf/chineseair/tarball/master">Download <strong>TAR Ball</strong></a></li>
-                    <li><a href="https://github.com/kopf/chineseair">View On <strong>GitHub</strong></a></li>
-                </ul>
-            </header>
-            -->
-
 <h1>Graphing Pollution Levels of Chinese Air</h1>
-<p>Reports of high levels of air pollution in China are nothing new, but <a href="http://www.bbc.co.uk/news/world-asia-china-21007893">recent reports</a> have startled many. These are reports of air quality levels so low that even the usually docile citizenry has begun to protest. </p>
-<p>The United States Embassy runs <a href="https://twitter.com/BeijingAir">a twitter account</a> which tweets the current levels of air pollution in Beijing. The values tweeted are points on the <a href="http://www.airnow.gov/index.cfm?action=aqibasics.aqi">Air Quality Index</a>. Apparently the authorities have threatened to shut it down multiple times but not yet followed through.</p>
-<p>I think it's a great idea and I've decided to graph the data, since it's rather tough to digest in tweet form. This graph will update hourly, just as the twitter feed does.</p>
-<h2>Current Pollution Levels</h2>
+<p>News of high levels of air pollution in China are nothing new, but <a href="http://www.bbc.co.uk/news/world-asia-china-21007893">recent reports</a> have startled many.</p>
+<blockquote>
+    <p>WHO guidelines say average concentrations of the tiniest pollution particles - called PM2.5 - should be no more than 25 microgrammes per cubic metre. Air is unhealthy above 100 microgrammes and at 300, all children and elderly people should remain indoors.</p>
+
+    <p>Official Beijing city readings on Saturday [12th January 2013] suggested pollution levels of over 400. An unofficial reading from a monitor at the US embassy recorded levels of over 800.</p>
+</blockquote>
+<p>As mentioned above, United States Embassies in China run twitter accounts which tweet the current levels of air pollution in <a href="https://twitter.com/BeijingAir" target="_new">Beijing</a>, <a href="https://twitter.com/CGShanghaiAir" target="_new">Shanghai</a>, <a href="https://twitter.com/Guangzhou_Air" target="_new">Guangzhou</a> and <a href="https://twitter.com/CGChengduAir" target="_new">Chengdu</a>. Apparently the authorities have threatened to shut them down on multiple occasions but not yet followed through.</p>
+<p>I think these twitter accounts are a great idea but they have one problem: it's rather difficult to digest the information (points on the <a href="http://www.airnow.gov/index.cfm?action=aqibasics.aqi">Air Quality Index</a>) in tweet form. Twitter does a great job at getting the information out there, but to properly consume it, you really need a graph. So, one evening I decided to hack this page together.</p>
+
+<p>The graphs will update hourly, just as the twitter feeds do.</p>
+<h2>Current Pollution Levels in Beijing</h2>
 <div id="chart_div" style="width: 700px; height: 240px;"></div>
 <h2>About me</h2>
-<p>I'm <a href="http://ventolin.org">Aengus Walton</a>, a software engineer from Ireland, currently living in Germany. You can <a href="http://github.com/kopf">see some of my open-source projects here</a>, and <a href="http://ventolin.org">read my (much neglected) blog here</a>. </p>
-<!--
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/kopf">kopf</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-      -->
+<p>I'm <a href="http://ventolin.org">Aengus Walton</a>, a software engineer from Ireland, currently living in Germany. You can <a href="http://github.com/kopf">see some of my open-source projects here</a>, and <a href="http://ventolin.org">read my (much neglected) blog here</a>.</p>
+<p>If you would like to contact me, you can <a href="http://ventolin.org/about-2">get my email address here</a>.</p>
 </div>
 <script src="javascripts/scale.fix.js"></script>
 <script type="text/javascript">
