--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<title>Chineseair by kopf</title>
+<title>Graphing Pollution Levels of Chinese Air (Aengus Walton)</title>
 <link rel="stylesheet" href="stylesheets/styles.css" />
 <link rel="stylesheet" href="stylesheets/pygment_trac.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
