Add note about twitter api restrictions

--- a/index.html
+++ b/index.html
@@ -1263,6 +1263,12 @@
 <p>The graphs will update hourly, just as the twitter feeds do.</p>
 <h2>Current Pollution Levels in Beijing</h2>
 <div id="chart_div" style="width: 700px; height: 240px;"></div>
+<h2>Twitter API Restrictions</h2>
+<p>Unfortunately, twitter has a limit on how far back developers can go when downloading tweets from an account.
+This means I've only been able to grab ~3400 tweets from each twitter account &mdash; even though the BeijingAir
+account, for example, has tweeted over 36,000 tweets.</p>
+<p>So, if anyone out there &mdash; Embassy worker, twitter dev, whoever &mdash; is able to provide me with all the tweets
+these accounts have tweeted, <strong>please</strong> <a href="http://ventolin.org/about-2">email me!</a></p>
 <h2>About me</h2>
 <p>I'm <a href="http://ventolin.org">Aengus Walton</a>, a software engineer from Ireland, currently living in Germany. You can <a href="http://github.com/kopf">see some of my open-source projects here</a>, and <a href="http://ventolin.org">read my (much neglected) blog here</a>.</p>
 <p>If you would like to contact me, you can <a href="http://ventolin.org/about-2">get my email address here</a>.</p>
