--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<title>Graphing Pollution Levels of Chinese Air (Aengus Walton)</title>
+<title>Graphing Air Pollution in China (Aengus Walton)</title>
 <link rel="stylesheet" href="stylesheets/styles.css" />
 <link rel="stylesheet" href="stylesheets/pygment_trac.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -3225,7 +3225,7 @@
 </head>
 <body>
 <div class="wrapper">
-<h1>Graphing Pollution Levels of Chinese Air</h1>
+<h1>Graphing Air Pollution in China</h1>
 <p>News of high levels of air pollution in China are nothing new, but <a href="http://www.bbc.co.uk/news/world-asia-china-21007893">recent reports</a> have startled many.</p>
 <blockquote>
 <p>WHO guidelines say average concentrations of the tiniest pollution particles - called PM2.5 - should be no more than 25 microgrammes per cubic metre. Air is unhealthy above 100 microgrammes and at 300, all children and elderly people should remain indoors.</p>
@@ -3233,7 +3233,7 @@
 </blockquote>
 <p>As mentioned above, United States Embassies in China run twitter accounts which tweet the current levels of air pollution in <a href="https://twitter.com/BeijingAir" target="_new">Beijing</a>, <a href="https://twitter.com/CGShanghaiAir" target="_new">Shanghai</a>, <a href="https://twitter.com/Guangzhou_Air" target="_new">Guangzhou</a> and <a href="https://twitter.com/CGChengduAir" target="_new">Chengdu</a>. Apparently the authorities have threatened to shut them down on multiple occasions but not yet followed through.</p>
 <p>I think these twitter accounts are a great idea but they have one problem: it's rather difficult to digest the information (points on the <a href="http://www.airnow.gov/index.cfm?action=aqibasics.aqi">Air Quality Index</a>) in tweet form. Twitter does a great job at getting the information out there, but to properly consume it, you really need a graph. So, one evening I decided to hack this page together.</p>
-<p>The graphs will update hourly, just as the twitter feeds do.</p>
+<p>The graph will update hourly, just as the twitter feeds do.</p>
 <h2>Current Pollution Levels</h2>
 <form>
 <label><input type="checkbox" onclick="javascript:toggleDisplayGraph(0)" name="Beijing" id="togglebox_0" checked /> Beijing</label>
