Add shoutout to twittergrep.com

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 Twitter API Restrictions
             </h2>
             <p>
-                Unfortunately, twitter has a limit on how far back developers can go when downloading tweets from an account. This means I've only been able to grab ~3400 tweets from each twitter account &#8212; even though the BeijingAir account, for example, has tweeted over 36,000 tweets.
+                Unfortunately, twitter has a limit on how far back developers can go when downloading tweets from an account. <a href="http://twittergrep.com" target="_new">twittergrep.com</a> helps, but unfortunately gets nowhere close to serving up an account's entire tweet archive.
             </p>
             <p>
-                So, if anyone out there &#8212; Embassy worker, twitter dev, whoever &#8212; is able to provide me with all the tweets these accounts have tweeted, <strong>please</strong> <a href="http://ventolin.org/about-2">email me!</a>
+                So, if anyone out there &#8212; Embassy worker, twitter dev, whoever &#8212; is able to provide me with these accounts' entire history, <strong>please</strong> <a href="http://ventolin.org/about-2">email me!</a>
             </p>
             <h2>
                 About me
